Keep overflow-x as hidden to avoid horizontal scrollbar on small screens

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -298,9 +298,6 @@ ul.grid-list h3 {
     font-size: 24px;
     line-height: 30px;
   }
-  html {
-   overflow: auto;
-  }
 }
 
 @media screen and (max-width: 1130px) {
